[package]
name = "muu"
version ="0.0.0-dev"
authors = ["Thomas Letan <lthms@soap.coffee"]
edition = "2018"

[dependencies]
xdg = "2"
chrono = "0.4"
regex = "1"
serde_json = "1"

[lib]
name = "mul"
path = "mul/lib.rs"

[[bin]]
name = "muf"
path = "muf/main.rs"

[[bin]]
name = "mur"
path = "mur/main.rs"