[package]
name = "keyr"
version ="0.0.0-dev"
authors = ["Thomas Letan <lthms@soap.coffee"]
edition = "2018"

[dependencies]
xdg = "2"
chrono = "0.4"
regex = "1"
serde_json = "1"

[lib]
path = "keyr-lib/lib.rs"

[[bin]]
name = "keyr-sync"
path = "keyr-sync/main.rs"

[[bin]]
name = "keyr-fmt"
path = "keyr-fmt/main.rs"