[package]
name = "keyr-agentstorage"
description = "A collection of functions to store locally your keystrokes"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "=0.4.22"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"

keyr-types = { path = "../keyr-types" }

[lib]
name = "keyr_agentstorage"
path = "lib.rs"