[package]
name = "keyr-fmt"
description = "Display your keystrokes statistics"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
keyr-localstorage = { path = "../keyr-localstorage" }
chrono = "0.4"
serde_json = "1"
tinytemplate = "1"
clap = "2"
num-format = { version = "0.4", features = ["with-system-locale"] }

[[bin]]
name = "keyr-fmt"
path = "main.rs"