[package]
name = "keyr-hub"
description = "The keyr hub"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
keyr-hubstorage = { path = "../keyr-hubstorage" }
actix-web = "3.0.0-beta.1"
anyhow = "1.0"
uuid = { version = "0.8", features = [ "v4" ] }

[[bin]]
name = "keyr-hub"
path = "main.rs"