[package]
name = "keyr-hub"
description = "The keyr hub"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
keyr-hubstorage = { path = "../keyr-hubstorage" }
keyr-types = { path = "../keyr-types" }
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
actix-web = "3.0.0-beta.1"
thiserror = "1"
anyhow = "1"
r2d2 = "0.8"
futures = "*"
uuid = { version = "0.8", features = [ "v4" ] }
serde = "1"
serde_json = "1"
chrono = "=0.4.22"
toml = "0.5"
clap = "2"

[[bin]]
name = "keyr-hub"
path = "main.rs"