[package]
name = "keyr-hubstorage"
description = "The keyr hub model and helper functions"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4"
thiserror = "1.0"
uuid = { version = "0.8", features = [ "v4" ] }
keyr-types = { path = "../keyr-types" }

[lib]
name = "keyr_hubstorage"
path = "lib.rs"