[package]
name = "keyr-legacy"
description = "A collection functions used by keyr-sync and keyr-fmt"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
xdg = "2"
chrono = "0.4"
regex = "1"
keyr-localstorage = { path = "../keyr-localstorage" }

[[bin]]
name = "keyr-legacy"
path = "main.rs"