[package]
name = "keyr-sync"
description = "The keyr agent"
version = "0.0.0-dev"
homepage = "https://sr.ht/~lthms/keyr"
authors = ["Thomas Letan <lthms@soap.coffee"]
repository = "https://git.sr.ht/~lthms/keyr"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "2"
num-format = { version = "0.4", features = ["with-system-locale"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1"
serde_json = "1"
tinytemplate = "1"
toml = "0.5"
xdg = "2"

keyr-localstorage = { path = "../keyr-localstorage" }
keyr-types = { path = "../keyr-types" }

[[bin]]
name = "keyr-sync"
path = "main.rs"